# rbfkit

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: todo.yml
rbfkit/: __init__.py  rbf.py
stubs/rbfkit/: rbf.pyi
tests/: test_rbf.py
