[tool.poetry]
name = "rbfkit"
version = "0.1.0"
description = "A lightweight, extensible toolkit for radial basis function interpolation and kernel-based modeling."
authors = ["Diogo Ribeiro <diogo.debastos.ribeiro@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DiogoRibeiro7/rbfkit"
repository = "https://github.com/DiogoRibeiro7/rbfkit"
keywords = ["rbf", "interpolation", "kernel", "radial-basis"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.18"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
python-semantic-release = "^9.21.0"
mypy = "^1.15.0"
invoke = "^2.2.0"


[tool.poetry.group.docs.dependencies]
myst-parser = "<4.0.0"

[tool.semantic_release]
version_source = "tag"
version_variable = ["pyproject.toml:tool.poetry.version"]
commit_version_number = true
changelog_file = "CHANGELOG.md"
upload_to_repository = false
branch = "main"
build_command = ""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
